--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -15,12 +15,15 @@
   <nav><a href="/login"><img id="logo" src="/assets/img/game.png" alt="game logo"/></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
     <div class="navlink"><a href="/home">Barracks</a></div>
-    <div class="navlink" ><a href="/create">Forge</a></div>
+    <div class="navlink"><a href="/create">Forge</a></div>
     <div class="navlink"><a href="/browse">Community</a></div>
     <div class="navlink"><a href="/account">Account</a></div>
   </nav>
-  <div class="pageTitle">Create Hero</div>
-  <section id="createForm"></section>
-  <script src="/assets/createBundle.js"></script>
+    <div class="pageTitle">Community Members</div>
+    <div class="pageSubtitle">Select account to view created heroes</div>
+    <section id="accounts"></section>
+    <section id="selectedAccount"></section>
+  <section id="dotaCharacters"></section>
+  <script src="/assets/browseBundle.js"></script>
 </body>
 </html>
