--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>MOBA Character Creator</title>
+  <title>Dota 2 Hero Workshop</title>
   <script crossorigin src="https://unpkg.com/react@15/dist/react.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
   <script crossorigin src="https://unpkg.com/prop-types/prop-types.min.js"></script>
@@ -16,11 +16,9 @@
     <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
     <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
   </nav>
-  <h1 id="title">MOBA Character Creator</h1>
+  <h1 id="title">Dota 2 Hero Workshop</h1>
   <div id="logoDisplay">
-    <img id="leagueLogo" src="/assets/img/league.png" alt="league logo"/>
     <img id="dotaLogo" src="/assets/img/dota.png" alt="dota logo"/>
-    <img id="smiteLogo" src="/assets/img/smite.png" alt="smite logo"/>
   </div>
   <section id="content"></section>
   <script src="/assets/loginBundle.js"></script>
