--- a/hosted/style.css
+++ b/hosted/style.css
@@ -38,14 +38,13 @@ nav:nth-child(1) {
     color: rgb(228, 227, 227);;
     text-decoration: none;
     padding: 5px;
-    border-radius: 4px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(110, 41, 41);
     transition: background-color 0.4s ease;
 }
 
 .navlink a:hover {
     transition: background-color 0.8s ease;
-    background-color: rgb(82, 82, 82);
+    background-color: rgba(110, 41, 41, 0.719);
 }
 
 .mainForm {
@@ -75,12 +74,11 @@ nav:nth-child(1) {
     margin-top: 14px;
     font-size: 1.2em;
     width: 100px;
-    background-color: red;
+    background-color: rgb(110, 41, 41);
     border-radius: 2px;
-    border-color: red;
+    border-color: rgb(110, 41, 41);
     padding: 3px 0px;
     color: rgb(211, 211, 211);;
-    text-decoration: none;
 }
 
 .formSubmit:link, .formSubmit:visited, .formSubmit:hover, .formSubmit:active {
@@ -89,7 +87,7 @@ nav:nth-child(1) {
 
 .formSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: red;
+    background-color: rgba(110, 41, 41, 0.692);;
 }
 
 #user, #pass, #pass2 {
@@ -104,22 +102,21 @@ nav:nth-child(1) {
     box-shadow: 0px 0px 1px 1px red;
 }
 
-#errorMessage {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: red;
-    font-style: italic;
-}
-
 .heroCard {
     margin: 0 auto;
-    background-color:rgb(163, 0, 0);
     border: 5px black solid;
-    border-radius: 1em;
     margin:5px;
     text-align:center;
     padding:5px;
-    
+}
+.heroCard[target=Strength]{
+    background-color:#ac3011;
+}
+.heroCard[target=Agility]{
+    background-color:#38ab36;
+}
+.heroCard[target=Intelligence]{
+    background-color:#1087bf;
 }
 
 .stat {
@@ -167,47 +164,14 @@ nav:nth-child(1) {
     margin-top:10px;
 }
 
-#leagueLogo {
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width:215px;
-    height:90px;
-}
-
-#smiteLogo {
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width:215px;
-    height:100px;
-}
-
 #dotaCharacters {
     background-color:black;
     color:black;
-    border-radius:1em;
-    margin:5px;
-}
-
-#leagueCharacters {
-    background-color:black;
-    color:rgb(211, 211, 211);
-    border-radius:1em;
-    margin:5px;
-}
-
-#smiteCharacters {
-    background-color:black;
-    color:rgb(211, 211, 211);
-    border-radius:1em;
-    margin-bottom:20px;
     margin:5px;
 }
 
 .spell {
     background-color: rgb(224, 224, 224);
-    border-radius: 1em;
     padding:2px;
     margin:10px;
 }
@@ -223,22 +187,21 @@ nav:nth-child(1) {
     display:inline-block;
 }
 
-#logoDisplay #leagueLogo {
-    display:inline-block;
-}
-
-#logoDisplay #smiteLogo {
-    display:inline-block;
-}
-
 .emptyHero {
     text-align:center;
+    color:rgb(211, 211, 211);
+}
+
+.emptyAccounts {
+    text-align:center;
+    color:black;
+    font-size: 30px;
 }
 
 .spellName {
     background:black;
+    border-radius: 1em;
     color:white;
-    border-radius:1em;
 }
 
 #selectGame {
@@ -264,4 +227,151 @@ nav:nth-child(1) {
 #game {
     background-color:black;
     color:rgb(211, 211, 211);
+}
+
+.pageTitle {
+    margin:25px;
+    text-align: center;
+    font-size: 40px;
+}
+
+#submitAccount {
+    width: 100%;
+    height: 100%;
+    background-color:rgb(110, 41, 41);
+    color:rgb(211, 211, 211);
+    font-size:20px;
+}
+
+#submitAccount:hover {
+    background-color:rgba(110, 41, 41, 0.719);
+    transition: background-color 0.4s ease;
+}
+
+.accountCard {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+}
+
+.pageSubtitle {
+    margin:15px;
+    text-align: center;
+    font-size: 20px;
+    color:rgba(0, 0, 0, 0.603);
+}
+
+#selectedAccount {
+    margin-top:100px;
+    margin-bottom:50px;
+    text-align: center;
+    font-size: 50px;
+}
+
+#dotaForm {
+    text-align:center;
+    font-size:20px;
+    background-color:rgb(110, 41, 41);
+    margin:50px;
+    padding:25px;
+    color:rgb(255, 255, 255);
+}
+
+#submitCharacter {
+    width: 90px;
+    height: 50px;
+    background-color:rgb(110, 41, 41);
+    color:rgb(211, 211, 211);
+}
+
+#submitCharacter:hover {
+    background-color:rgba(110, 41, 41, 0.74);
+    transition: background-color 0.4s ease;
+}
+
+.formInput {
+    margin:25px;
+}
+
+
+#base .formInput {
+    display:inline-block;
+}
+
+#stats .formInput {
+    display:inline-block;
+}
+
+.abilityDesc {
+    width: 400px;
+    height: 300px;
+    
+}
+
+.spellInput {
+    display: inline-block;
+    margin: 20px;
+}
+
+#character {
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: rgb(235, 235, 235);
+    font-style: italic;
+    margin-bottom:50px;
+    font-weight: bold;
+}
+
+#errorMessage {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: rgb(250, 23, 23);
+    font-style: italic;
+    text-align: center;
+    margin-bottom:50px;
+}
+
+#loginForm #errorMessage, #signupForm #errorMessage {
+    margin-bottom:10px;
+
+}
+
+#accountInfo {
+    text-align: center;
+}
+
+#changePass {
+    margin-top:25px;
+}
+
+#passLabel {
+    font-size:25px;
+    margin:25px;
+}
+
+#passSubmit {
+    transition: background-color 0.4s ease;
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 14px;
+    font-size: 1.2em;
+    width: 200px;
+    background-color: rgb(110, 41, 41);
+    border-radius: 2px;
+    border-color: rgb(110, 41, 41);
+    padding: 3px 0px;
+    color: rgb(211, 211, 211);;
+    text-decoration: none;
+}
+
+#passSubmit:hover {
+    background-color: rgba(110, 41, 41, 0.692);
+}
+
+#passSuccess {
+    text-align:center;
+    font-size:20px;
 }
