--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -15,12 +15,13 @@
   <nav><a href="/login"><img id="logo" src="/assets/img/game.png" alt="game logo"/></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
     <div class="navlink"><a href="/home">Barracks</a></div>
-    <div class="navlink" ><a href="/create">Forge</a></div>
+    <div class="navlink"><a href="/create">Forge</a></div>
     <div class="navlink"><a href="/browse">Community</a></div>
     <div class="navlink"><a href="/account">Account</a></div>
   </nav>
-  <div class="pageTitle">Create Hero</div>
-  <section id="createForm"></section>
-  <script src="/assets/createBundle.js"></script>
+    <div class="pageTitle">Your Account</div>
+    <section id="accountInfo"></section>
+    <section id="passSuccess"></section>
+  <script src="/assets/accountBundle.js"></script>
 </body>
 </html>
