--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -19,6 +19,8 @@
     <div class="navlink"><a href="/browse">Community</a></div>
     <div class="navlink"><a href="/account">Account</a></div>
   </nav>
+    <div class="pageTitle">Most Popular Heroes</div>
+    <section id="topHeroes"></section>
     <div class="pageTitle">Community Members</div>
     <div class="pageSubtitle">Select account to view created heroes</div>
     <section id="accounts"></section>
