--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -20,7 +20,14 @@
     <div class="navlink"><a href="/account">Account</a></div>
   </nav>
   <div class="pageTitle">Your Heroes</div>
-  <section id="dotaCharacters"></section>
+  <section id="dotaCharacters">
+    <label class="heroLabel" target="strength">Strength</label>
+    <div id="strengthHeroes"></div>
+    <label class="heroLabel" target="agility">Agility</label>
+    <div id="agilityHeroes"></div>
+    <label class="heroLabel" target="intelligence">Intelligence</label>
+    <div id="intelligenceHeroes"></div>
+  </section>
   <script src="/assets/homeBundle.js"></script>
 </body>
 </html>
