--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -25,7 +25,11 @@
     <div class="pageSubtitle">Select account to view created heroes</div>
     <section id="accounts"></section>
     <section id="selectedAccount"></section>
-  <section id="dotaCharacters"></section>
+  <section id="dotaCharacters">
+    <label id="str" target="strength"></label>
+    <label id="agi" target="agility"></label>
+    <label id="int" target="intelligence"></label>
+  </section>
   <script src="/assets/browseBundle.js"></script>
 </body>
 </html>
